2.0.0 (master)
* Use Wirb 2.0 and FancyIrb 1.0
* Drop support for Ruby 1
* Simplify starting from code via: require 'irbtools/binding'
* Rename method to show a method's source to: code
* Add instance gem
* Remove code organization gems (boson + alias)
* Improve loading order of libraries
* Remove aliases for Irbtools configuration
* Integrate irbtools-more into irbtools main repo
* EveryDayIrb now gets released on its own, instead with every new irbtools version
* Improve documentation in Readme

1.7.1
* bump binding.repl, hirb, methodfinder

1.7.0
* bump boson, boson-more, binding.repl
* required ruby version: 1.9.3
* remove awesome_print

1.6.1
* don't load debugging/repl by default
* rename re method to engine and rv to version

1.6.0
* remove zucker dependency, but add debugging, ruby_version, ruby_engine, ruby_info and os gem
* configure binding.repl to load irb, not pry
* bump binding.repl, paint, wirb

1.5.1
* include binding.repl gem
* bump coderay, awesome_print, method_source, wirb

1.5.0
* update debundle hack
* load less zucker libraries
* add alias gem
* finaly load boson correctly (but don't load any boson plugin, yet), also depend on boson-more
* version bumps (zucker, clipboard, paint, hirb, wirb, ap, coderay, g)

1.4.0
* every_day_irb is now a module that extends self
* specs for most of every_day_irb's functionality
* add helper method for paging output with hirb: page
* version bumps, including wirb and fancy_irb
* remove sketches dependency, it's a great gem, but very similar to interactive_editor
* Object#mlp alias for method_lookup_path

1.3.0 == 1.2.3
* add modern debundle note
* remove loading of .railsrc
* remove dbg method
* version bumps

1.2.2
* fix errors when inspect returns nil (e.g. CarrierWave uploaders)
* create legacy branch for 1.8.7 support

1.2.1
* fix newboson loader issue
* minor version bumps

1.2.0
* version bumps: hirb, awesome_print, coderay, g, methodfinder, method_source
* remove RVM helpers: Sorry, were too buggy...