@@ -2,3 +2,4 @@
 * Separate every_day_irb release cycle from irbtools release cycle
 * Move cd enhancements into cd microgem on which every_day_irb depends
 * You must extend EveryDayIrb explicitely, does not happen on require, anymore
+* Add rr for require_relative
